--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "typescript": "5.0.4"
   },
   "lint-staged": {
-    "./**/*.{ts,tsx}": "eslint --cache --fix",
+    "./**/*.{ts,tsx}": "eslint --fix",
     "./**/*.{ts,tsx,scss}": "prettier --write"
   }
 }
