--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
