--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "next": "13.4.4",
-    "postcss": "8.4.24",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
-    "tailwindcss": "3.3.2",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -38,7 +41,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "postcss": "8.4.24",
     "prettier": "^2.8.8",
+    "prisma": "^4.15.0",
+    "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "lint-staged": {
