--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
