feat: add filters/search modal

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write .",
     "lint": "eslint --fix .",
     "pre-commit": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
@@ -18,7 +19,7 @@
     "bcrypt": "^5.1.0",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
-    "next": "13.4.4",
+    "next": "^13.4.3",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.12.0",
     "query-string": "^8.1.0",
@@ -30,6 +31,7 @@
     "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
     "world-countries": "^4.0.0",
     "zustand": "^4.3.8"
   },
