docs: update readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["latlng", "NEXTAUTH", "nioii", "prismadb", "Stringifiable"]
+  "cSpell.words": [
+    "latlng",
+    "NEXTAUTH",
+    "nioii",
+    "prismadb",
+    "Stringifiable",
+    "Treehouse",
+    "Treehouses"
+  ]
 }
